--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -2,9 +2,9 @@ FROM node:22.13-alpine AS build
 
 WORKDIR /app
 
-COPY . .
+COPY ui .
 
-RUN npm install && npm run build
+RUN npm install -g yarn && yarn install && yarn build
 
 FROM node:20.9.0-alpine AS production
 
